项目实战篇

--- a/doc/1-前端工具篇.md
+++ b/doc/1-前端工具篇.md
@@ -1,10 +1,10 @@
 # 每周GItHub推荐-前端工具篇
 
-## Moment.js
+## day.js
 
-[仓库地址](https://github.com/moment/moment)  
+[仓库地址](https://github.com/iamkun/dayjs)  
 
-Moment.js是一个轻量级的JavaScript时间库，它方便了日常开发中对时间的操作，提高了开发效率；提供了获取时间、设置时间、格式化时间、比较时间等功能，并且提供多地区、语言支持
+day.js是一个轻量级的JavaScript时间库，它方便了日常开发中对时间的操作，提高了开发效率；提供了获取时间、设置时间、格式化时间、比较时间等功能，并且提供多地区、语言支持
 
 ## lodash
 
